--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Take Home</title>
 </head>
 <body>
     
-</body>
+    <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#2">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    
+    <div class="row">
+        <div class="column">
+            <h2>Column 1</h2>
+            <p>lorem ipsum..</p>
+        </div>
+        <div class="column">
+            <h2>Column 2</h2>
+            <p>lorem ipsum..</p>
+        </div>
+        <div class="column">
+            <h2>Column 3</h2>
+            <p>lorem ipsum..</p>
+        </div>
+        <div class="column">
+            <h2>Column 4</h2>
+            <p>lorem ipsum..</p>
+        </div>
+    </div>
+
+    <div class="lorem">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio sit molestiae, dolorum suscipit voluptatibus quod error esse iste alias eum, repellat obcaecati, eius cumque quisquam consequatur quo? Amet, ad mollitia!
+        Quisquam provident nihil odio sequi accusamus quo harum accusantium aperiam numquam? Eligendi facilis quaerat natus animi rem, ipsam molestias sunt voluptatem velit laudantium recusandae quo sit et soluta.</p>
+    </div>
+
+    </body>
 </html>
